--- a/slides/slides.scss
+++ b/slides/slides.scss
@@ -4,7 +4,7 @@
 @import 'https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&display=swap';
 
 $font-family-sans-serif: "Open Sans", sans-serif;
-$presentation-heading-color: #4e97a6;
+$presentation-heading-color: #407E99;
 $presentation-title-slide-text-align: "left";
 $presentation-font-size-root: 36px;
 $code-block-font-size: 0.7em;
