add nov 12 notes.

--- a/slides/slides.scss
+++ b/slides/slides.scss
@@ -133,3 +133,10 @@ a:hover {
     margin-bottom:60px  !important;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
