--- a/slides/slides.scss
+++ b/slides/slides.scss
@@ -140,3 +140,13 @@ a:hover {
   width: 50%;
 }
 
+.reveal .slide .equation {
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  padding-top: 0.1em;
+  padding-bottom: 0.1em;
+  padding-left: 1em;
+  background: #bee1ec;
+}
+
+
